--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/custom.css">
   <script type="text/javascript" src="assets/javascript/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script>//Google Analytics
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-45739625-1', 'cleverfit.net');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
   
