Linking to Mailchimp

--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
   <div class="jumbotron">
       <h1>Helping you find pants that fit</h1>
       <p class="lead">You have a pair of pants you love. Find others like it.</p>
-      <p><a class="btn btn-lg btn-success" href="#" role="button">Find out when we launch</a></p>
+      <p><a class="btn btn-lg btn-success" href="http://eepurl.com/baw7GT" role="button">Find out when we launch</a></p>
 
     </div>
-    <p class="small">Coming no sooner than January. Realistically.</p>
 </div>
 
 </body>
